Psoc/UV-Project/UV-SG-TEMP.cydsn/BUILD.log
--------------- Build Started: 05/12/2018 22:36:59 Project: UV-SG-TEMP, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
The code generation step is up to date.
arm-none-eabi-gcc.exe -mcpu=cortex-m0 -mthumb -I. -IGenerated_Source\PSoC4 -Wa,-alh=.\CortexM0\ARM_GCC_541\Debug/system.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c system.c -o .\CortexM0\ARM_GCC_541\Debug\system.o
system.c: In function 'system_init_hardware':
system.c:31:5: warning: implicit declaration of function 'ADC_Start' [-Wimplicit-function-declaration]
     ADC_Start(); //Starting ADC
     ^
arm-none-eabi-gcc.exe -mcpu=cortex-m0 -mthumb -I. -IGenerated_Source\PSoC4 -Wa,-alh=.\CortexM0\ARM_GCC_541\Debug/uv.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c uv.c -o .\CortexM0\ARM_GCC_541\Debug\uv.o
arm-none-eabi-gcc.exe -mcpu=cortex-m0 -mthumb -I. -IGenerated_Source\PSoC4 -Wa,-alh=.\CortexM0\ARM_GCC_541\Debug/adafruit_guva.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c adafruit_guva.c -o .\CortexM0\ARM_GCC_541\Debug\adafruit_guva.o
arm-none-eabi-gcc.exe -mcpu=cortex-m0 -mthumb -I. -IGenerated_Source\PSoC4 -Wa,-alh=.\CortexM0\ARM_GCC_541\Debug/sg.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c sg.c -o .\CortexM0\ARM_GCC_541\Debug\sg.o
sg.c: In function 'sg_uart':
sg.c:33:10: warning: variable 'sg_uart_string' set but not used [-Wunused-but-set-variable]
     char sg_uart_string[7]; //Stores UV Photodiode Power Density in Message
          ^
arm-none-eabi-gcc.exe -mcpu=cortex-m0 -mthumb -I. -IGenerated_Source\PSoC4 -Wa,-alh=.\CortexM0\ARM_GCC_541\Debug/watchdog.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c watchdog.c -o .\CortexM0\ARM_GCC_541\Debug\watchdog.o
arm-none-eabi-gcc.exe -mcpu=cortex-m0 -mthumb -I. -IGenerated_Source\PSoC4 -Wa,-alh=.\CortexM0\ARM_GCC_541\Debug/led.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c led.c -o .\CortexM0\ARM_GCC_541\Debug\led.o
arm-none-eabi-gcc.exe -mcpu=cortex-m0 -mthumb -I. -IGenerated_Source\PSoC4 -Wa,-alh=.\CortexM0\ARM_GCC_541\Debug/battery.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c battery.c -o .\CortexM0\ARM_GCC_541\Debug\battery.o
battery.c: In function 'measure_battery':
battery.c:17:25: error: 'ADC_SAR_CTRL_REG' undeclared (first use in this function)
  uint32 sarControlReg = ADC_SAR_CTRL_REG & ~ADC_VREF_MASK;
                         ^
battery.c:17:25: note: each undeclared identifier is reported only once for each function it appears in
battery.c:18:37: error: 'ADC_VREF_INTERNAL1024BYPASSED' undeclared (first use in this function)
  ADC_SAR_CTRL_REG = sarControlReg | ADC_VREF_INTERNAL1024BYPASSED;
                                     ^
battery.c:23:2: warning: implicit declaration of function 'ADC_StartConvert' [-Wimplicit-function-declaration]
  ADC_StartConvert();
  ^
battery.c:24:2: warning: implicit declaration of function 'ADC_IsEndConversion' [-Wimplicit-function-declaration]
  ADC_IsEndConversion(ADC_WAIT_FOR_RESULT);
  ^
battery.c:24:22: error: 'ADC_WAIT_FOR_RESULT' undeclared (first use in this function)
  ADC_IsEndConversion(ADC_WAIT_FOR_RESULT);
                      ^
battery.c:26:24: warning: implicit declaration of function 'ADC_GetResult16' [-Wimplicit-function-declaration]
     uint16 adcResult = ADC_GetResult16(BATTERY_CHANNEL);
                        ^
battery.c:32:37: error: 'ADC_VREF_VDDA' undeclared (first use in this function)
  ADC_SAR_CTRL_REG = sarControlReg | ADC_VREF_VDDA;
                                     ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Build Failed: 05/12/2018 22:37:00 ---------------
